--- a/index.html
+++ b/index.html
@@ -211,12 +211,39 @@
 
     /* MOBILE */
     @media (max-width: 768px) {
+
+      .hero {
+        height: auto;
+        min-height: 100vh;
+        background-size: contain;
+        background-position: center top;
+        background-repeat: no-repeat;
+        background-color: #02070c;
+      }
+
+      .hero::after {
+        background: linear-gradient(
+          to bottom,
+          rgba(2,7,12,0.1),
+          rgba(2,7,12,0.95)
+        );
+      }
+
+      .hero-content {
+        justify-content: flex-end;
+        padding-bottom: 60px;
+      }
+
       .hero-content h1 {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
       }
 
       .hero-content p {
-        font-size: 1.2rem;
+        font-size: 1.15rem;
+      }
+
+      .btn {
+        padding: 16px 50px;
       }
     }
   </style>
@@ -285,7 +312,6 @@
     Igreja As Nações Para Cristo
   </footer>
 
-  <!-- SCRIPT -->
   <script>
     const reveals = document.querySelectorAll(".reveal");
 
