--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       inset: 0;
       background: linear-gradient(
         to bottom,
-        rgba(2,7,12,0.35),
+        rgba(2,7,12,0.45),
         rgba(2,7,12,0.9)
       );
     }
@@ -57,6 +57,7 @@
       font-size: 3.2rem;
       color: #f2d98c;
       margin-bottom: 20px;
+      text-shadow: 0 6px 25px rgba(0,0,0,0.6);
     }
 
     .hero-content p {
@@ -65,6 +66,7 @@
       line-height: 1.6;
       margin-bottom: 40px;
       color: #f2f2f2;
+      text-shadow: 0 4px 20px rgba(0,0,0,0.55);
     }
 
     /* BOTÃO */
@@ -209,7 +211,7 @@
       color: #bdbdbd;
     }
 
-    /* MOBILE */
+    /* MOBILE – LEGIBILIDADE GARANTIDA */
     @media (max-width: 768px) {
 
       .hero {
@@ -224,14 +226,20 @@
       .hero::after {
         background: linear-gradient(
           to bottom,
-          rgba(2,7,12,0.1),
-          rgba(2,7,12,0.95)
+          rgba(2,7,12,0.15),
+          rgba(2,7,12,0.98)
         );
       }
 
       .hero-content {
         justify-content: flex-end;
-        padding-bottom: 60px;
+        padding-bottom: 70px;
+        background: linear-gradient(
+          to top,
+          rgba(2,7,12,0.85),
+          rgba(2,7,12,0.3),
+          transparent
+        );
       }
 
       .hero-content h1 {
