--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         linear-gradient(to bottom, #02070c, #061a28, #02070c);
       color: #ffffff;
       overflow-x: hidden;
-      scroll-behavior: smooth;
     }
 
     /* HERO */
@@ -59,7 +58,6 @@
       font-size: 3.2rem;
       color: #f2d98c;
       margin-bottom: 20px;
-      text-shadow: 0 6px 25px rgba(0,0,0,0.6);
     }
 
     .hero-content p {
@@ -68,41 +66,18 @@
       line-height: 1.6;
       margin-bottom: 40px;
       color: #f2f2f2;
-      text-shadow: 0 4px 20px rgba(0,0,0,0.55);
     }
 
     /* BOTÃO */
     .btn {
-      display: inline-block;
       padding: 16px 60px;
-      font-size: 1.05rem;
-      font-weight: 600;
       border-radius: 10px;
+      font-weight: 600;
       text-decoration: none;
       color: #111;
       background: linear-gradient(135deg, #f2d98c, #d4af37);
       box-shadow: 0 12px 35px rgba(0,0,0,0.6);
-      transition: all 0.35s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .btn::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(
-        120deg,
-        transparent,
-        rgba(255,255,255,0.35),
-        transparent
-      );
-      transform: translateX(-100%);
-      transition: transform 0.6s ease;
-    }
-
-    .btn:hover::after {
-      transform: translateX(100%);
+      transition: 0.3s;
     }
 
     .btn:hover {
@@ -119,47 +94,58 @@
       font-family: 'Playfair Display', serif;
       font-size: 2.2rem;
       color: #f2d98c;
-      margin-bottom: 60px;
+      margin-bottom: 50px;
       text-transform: uppercase;
-      letter-spacing: 1px;
     }
 
-    /* PARA QUEM É */
-    .publico {
-      background: linear-gradient(to bottom, #02070c, #02070c);
-    }
-
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-      gap: 30px;
-      max-width: 1000px;
+    /* ACCORDION */
+    .accordion {
+      max-width: 900px;
       margin: 0 auto;
+      text-align: left;
     }
 
-    .card {
-      background: linear-gradient(to bottom, #081f30, #02070c);
-      padding: 35px 25px;
-      border-radius: 14px;
-      box-shadow: 0 18px 45px rgba(0,0,0,0.6);
-      transition: all 0.4s ease;
+    .accordion-item {
+      border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 30px 70px rgba(0,0,0,0.9);
+    .accordion-header {
+      cursor: pointer;
+      padding: 22px 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1.2rem;
+      font-weight: 500;
+      transition: color 0.3s;
     }
 
-    .card span {
-      font-size: 2rem;
-      display: block;
-      margin-bottom: 15px;
+    .accordion-header:hover {
+      color: #f2d98c;
     }
 
-    .card p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #e2e2e2;
+    .accordion-header span {
+      font-size: 1.5rem;
+      transition: transform 0.3s;
+    }
+
+    .accordion-content {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease;
+      font-size: 1.05rem;
+      line-height: 1.7;
+      color: #dcdcdc;
+      padding: 0 10px;
+    }
+
+    .accordion-item.active .accordion-content {
+      max-height: 300px;
+      padding-bottom: 25px;
+    }
+
+    .accordion-item.active .accordion-header span {
+      transform: rotate(45deg);
     }
 
     /* EVENTO */
@@ -167,67 +153,30 @@
       background: linear-gradient(to bottom, #061a28, #02070c);
     }
 
-    .cartaz {
-      max-width: 420px;
-      margin: 0 auto 40px;
-      border-radius: 14px;
-      overflow: hidden;
-      box-shadow: 0 18px 55px rgba(0,0,0,0.7);
-      transition: all 0.4s ease;
-    }
-
-    .cartaz:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 30px 80px rgba(0,0,0,0.95);
-    }
-
-    .cartaz img {
-      width: 100%;
-      display: block;
-    }
-
-    .evento-info {
-      font-size: 1.25rem;
-      line-height: 2;
-      color: #e2e2e2;
-      margin-bottom: 45px;
-    }
-
     footer {
-      padding: 35px 20px;
-      text-align: center;
-      font-size: 0.95rem;
+      padding: 30px;
       background: #02070c;
-      color: #bdbdbd;
+      color: #aaa;
+      font-size: 0.9rem;
     }
 
     /* MOBILE */
     @media (max-width: 768px) {
-
       .hero {
         height: auto;
         min-height: 100vh;
         background-size: contain;
         background-position: center top;
         background-repeat: no-repeat;
-        background-color: #02070c;
-      }
-
-      .hero::after {
-        background: linear-gradient(
-          to bottom,
-          rgba(2,7,12,0.15),
-          rgba(2,7,12,0.98)
-        );
       }
 
       .hero-content {
         justify-content: flex-end;
-        padding-bottom: 70px;
+        padding-bottom: 60px;
         background: linear-gradient(
           to top,
           rgba(2,7,12,0.85),
-          rgba(2,7,12,0.3),
+          rgba(2,7,12,0.2),
           transparent
         );
       }
@@ -245,6 +194,7 @@
 
 <body>
 
+  <!-- HERO -->
   <div class="hero">
     <div class="hero-content">
       <h1>Homens de Impacto</h1>
@@ -252,41 +202,76 @@
         Homens despertados por Deus para viver com propósito, caráter e autoridade,
         transformando famílias, igrejas e a sociedade.
       </p>
-      <a href="#evento" class="btn">Quero Participar</a>
+      <a href="#proposito" class="btn">Conheça o Propósito</a>
     </div>
   </div>
 
-  <section class="publico">
-    <h2 class="section-title">Para Quem É</h2>
+  <!-- PROPÓSITO -->
+  <section id="proposito">
+    <h2 class="section-title">Nosso Propósito</h2>
 
-    <div class="cards">
-      <div class="card"><span>👨‍👩‍👧‍👦</span><p>Fortalecer família e liderança.</p></div>
-      <div class="card"><span>✝️</span><p>Crescimento espiritual e propósito.</p></div>
-      <div class="card"><span>💼</span><p>Integridade na vida e no trabalho.</p></div>
-      <div class="card"><span>🔥</span><p>Homens chamados para algo maior.</p></div>
+    <div class="accordion">
+
+      <div class="accordion-item">
+        <div class="accordion-header">
+          Fortalecer família e liderança
+          <span>+</span>
+        </div>
+        <div class="accordion-content">
+          O Homens de Impacto existe para levantar homens que lideram primeiro dentro de casa,
+          assumindo responsabilidade espiritual, emocional e moral sobre sua família.
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <div class="accordion-header">
+          Crescimento espiritual e propósito
+          <span>+</span>
+        </div>
+        <div class="accordion-content">
+          Nosso foco é despertar homens para uma caminhada sólida com Deus,
+          entendendo identidade, chamado e propósito no Reino.
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <div class="accordion-header">
+          Integridade na vida e no trabalho
+          <span>+</span>
+        </div>
+        <div class="accordion-content">
+          Acreditamos em homens íntegros, que vivem os mesmos valores no altar,
+          em casa e no ambiente profissional.
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <div class="accordion-header">
+          Homens chamados para algo maior
+          <span>+</span>
+        </div>
+        <div class="accordion-content">
+          O projeto desperta homens para entender que suas vidas fazem parte
+          de algo maior do que si mesmos: o propósito eterno de Deus.
+        </div>
+      </div>
+
     </div>
-  </section>
-
-  <section class="evento" id="evento">
-    <h2 class="section-title">Primeiro Encontro</h2>
-
-    <div class="cartaz">
-      <img src="cartaz-evento.png" alt="Cartaz do Evento">
-    </div>
-
-    <div class="evento-info">
-      <p>📅 28 de fevereiro de 2026</p>
-      <p>⏰ A partir das 19:00</p>
-      <p>📍 Av. Monteiro Lobato, 1283 – Guarulhos/SP</p>
-      <p>🎤 Pres.: Jair Cordeiro</p>
-    </div>
-
-    <a href="#" class="btn">Solicitar Entrada no Grupo</a>
   </section>
 
   <footer>
     Igreja As Nações Para Cristo
   </footer>
+
+  <script>
+    const items = document.querySelectorAll('.accordion-item');
+
+    items.forEach(item => {
+      item.querySelector('.accordion-header').addEventListener('click', () => {
+        item.classList.toggle('active');
+      });
+    });
+  </script>
 
 </body>
 </html>
