--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       text-shadow: 0 4px 20px rgba(0,0,0,0.55);
     }
 
-    /* BOTÃO */
+    /* BOTÃO (mantido só no hero) */
     .btn {
       padding: 16px 60px;
       border-radius: 10px;
@@ -118,7 +118,6 @@
       box-shadow: 0 18px 45px rgba(0,0,0,0.6);
       transition: all 0.4s ease;
       cursor: pointer;
-      text-align: center;
     }
 
     .card:hover {
@@ -137,11 +136,11 @@
       margin-bottom: 10px;
     }
 
-    .card .card-text {
+    .card-text {
       max-height: 0;
       overflow: hidden;
-      transition: max-height 0.5s ease, opacity 0.5s ease;
       opacity: 0;
+      transition: all 0.5s ease;
       font-size: 1rem;
       line-height: 1.6;
       color: #dcdcdc;
@@ -181,7 +180,7 @@
       font-size: 1.25rem;
       line-height: 2;
       color: #e2e2e2;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
     }
 
     footer {
@@ -294,8 +293,6 @@
       <p>📍 Av. Monteiro Lobato, 1283 – Guarulhos/SP</p>
       <p>🎤 Pres.: Jair Cordeiro</p>
     </div>
-
-    <a href="#" class="btn">Solicitar Entrada no Grupo</a>
   </section>
 
   <footer>
