--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         header h1 {
             margin: 0;
             font-size: 32px;
-            color: #d4af37;
+            color: #d4af37; /* dourado */
         }
 
         header p {
@@ -42,27 +42,12 @@
             border-radius: 12px;
             padding: 25px;
             box-shadow: 0 0 20px rgba(0,0,0,0.4);
-            text-align: center;
         }
 
         .radio-box h2 {
             margin-top: 0;
             color: #d4af37;
-        }
-
-        audio {
-            width: 100%;
-            margin: 20px 0;
-        }
-
-        .fallback {
-            margin-top: 15px;
-            font-size: 14px;
-        }
-
-        .fallback a {
-            color: #d4af37;
-            text-decoration: underline;
+            text-align: center;
         }
 
         footer {
@@ -77,35 +62,36 @@
 
 <body>
 
-<header>
-    <h1>Homens de Impacto</h1>
-    <p>Homens chamados para algo maior</p>
-</header>
+    <!-- CABEÇALHO -->
+    <header>
+        <h1>Homens de Impacto</h1>
+        <p>Homens chamados para algo maior</p>
+    </header>
 
-<section>
-    <div class="radio-box">
-        <h2>🎙️ Rádio Laços de Fé FM</h2>
+    <!-- SEÇÃO DA RÁDIO -->
+    <section>
+        <div class="radio-box">
+            <h2>🎙️ Rádio Laços de Fé FM</h2>
 
-        <audio controls preload="none">
-            <source src="https://radiolacosdefefm.siteweb.net.br/stream.mp3" type="audio/mpeg">
-            <source src="https://radiolacosdefefm.siteweb.net.br/;stream.mp3" type="audio/mpeg">
-            Seu navegador não suporta rádio ao vivo.
-        </audio>
+            <iframe 
+                src="https://radiolacosdefefm.siteweb.net.br/player.html"
+                width="100%" 
+                height="150" 
+                frameborder="0" 
+                scrolling="no"
+                allow="autoplay">
+            </iframe>
 
-        <div class="fallback">
-            Se não tocar, <a href="https://radiolacosdefefm.siteweb.net.br/" target="_blank">
-            clique aqui para ouvir diretamente no site da rádio</a>.
+            <p style="text-align:center; margin-top:15px;">
+                Palavra, louvor e conteúdo que fortalecem homens de fé.
+            </p>
         </div>
+    </section>
 
-        <p style="margin-top:15px;">
-            Palavra, louvor e conteúdo que fortalecem homens de fé.
-        </p>
-    </div>
-</section>
-
-<footer>
-    © 2026 – Projeto Homens de Impacto • Todos os direitos reservados
-</footer>
+    <!-- RODAPÉ -->
+    <footer>
+        © 2026 – Projeto Homens de Impacto • Todos os direitos reservados
+    </footer>
 
 </body>
 </html>
